Wed Apr 13 14:58:18 2005  Søren Sandmann  <sandmann@redhat.com>

	* lmctypes.h: Add this file

Wed Apr 13 14:39:54 2005  Søren Sandmann  <sandmann@redhat.com>

	* Commit first attempt at using GL

	For to those following along at home: It won't work unless you
	patch your X server.

Mon Mar 28 15:34:37 2005  Søren Sandmann  <sandmann@redhat.com>

	* Merge changes on head.

Thu Feb 24 15:17:09 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c, src/cwindow.c: Support shaped windows, disable
	snow, don't draw background.

Sat Feb 12 19:52:09 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (create_root_buffer): Get rid of shocking pink
	background.

2005-02-12  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Revert compositor checks to what HEAD
	has ... what was here wasn't really functional.

Tue Feb  1 16:21:40 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/snow.[ch]: new files
	
	* src/cwindow.c: Tweak the shadows a bit, remove unused code. Make
	sure we don't crash when we try to freeze a non-existing window.

	* src/compositor.c (update_world):  Hook up the snow.

	* src/Makefile.am (metacity_SOURCES): Add snow.[ch]

	* README: Add a note about the branch

Wed Jan 26 18:00:35 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/cwindow.c: Add Gaussian shadows, lifted from xcompmgr. Add
	support for translucent windows.

	* src/compositor.c: Support translucent windows.

	* src/window.c: Make unfocused windows translucent.

Mon Jan 24 20:27:53 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/window.c: start compositing after ending grap op

Mon Jan 24 17:07:26 2005  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (remove_repair_idle): Don't use a timeout to do
	the repair. Add meta_compositor_start/stop_compositing()

	* src/cwindow.[ch]: Add cwindow_freeze()/thaw() to stop and start
	compositing. Update various places to use stored geometry.

	* src/window.c: Use start/stop composting to make resizing smooth.
