@@ -1,3 +1,7 @@
+Thu Apr 14 14:49:14 2005  Soeren Sandmann  <sandmann@redhat.com>
+
+	* Various updates to the GL compositor. Much less purple.
+
 Wed Apr 13 14:58:18 2005  Søren Sandmann  <sandmann@redhat.com>
 
 	* lmctypes.h: Add this file
